--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -19,10 +19,9 @@
     width: 100%;
     margin: 0 auto;
     position: relative;
-    background-color:white;
+    background-color: black;
     border-radius: 25px;
   }
-  /* rgb(220, 219, 219) */
 
 .form-group h1{
     color: rgba(30, 215,96,1);
